UI: Fixed resize bug.
Because of #content having 100% width, it would overflow the window and cause
the horizontal scrollbar to appear. Thus, window.height() would be smaller
than the actual height because the scrollbar is not taken into consideration.

Also, fixed an unclosed element.

--- a/ui/static/css/layout.css
+++ b/ui/static/css/layout.css
@@ -34,7 +34,6 @@ html, body {
 	left: 200px;
 	top: 36px;
 	padding: 10px 20px;
-	width: 100%;
 	border: 2px double #999;
 }
 
